# pyproject-setup-template

./: .gitignore  README.md
configs/: .flake8  .pre-commit-config.yaml  check_changelog.py  pyproject.toml  tox.ini
docs/: BRANCHES.md  CHANGELOG.md  FAQ.md  LINKS.md  ROADMAP.md  libraries.md
examples/: context_example.py
examples/docs/: python_docstrings.py
